FuzzyRules redone