@@ -8,9 +8,9 @@ import java.util.ArrayList;
  * @verion 2.0
  */
 
-public class FuzzyRule<InputX, OutputX> {
+public class FuzzyRule<OutputX> {
 
-	ArrayList<DiscreteFuzzySet<InputX>> antecedents;
+	ArrayList<DiscreteFuzzySet> antecedents;
 	DiscreteFuzzySet<OutputX> consequent;
 	
 	/**
@@ -18,7 +18,7 @@ public class FuzzyRule<InputX, OutputX> {
 	 * @param ants an ArrayList of DiscreteFuzzySets representing the fuzzy consequents of this rule.
 	 * @param cons	a DiscreteFuzzySet representing the consequent of this rule.
 	 */
-	public FuzzyRule(ArrayList<DiscreteFuzzySet<InputX>> ants, DiscreteFuzzySet<OutputX> cons) {
+	public FuzzyRule(ArrayList<DiscreteFuzzySet> ants, DiscreteFuzzySet<OutputX> cons) {
 		setAntecedents(ants); 
 		setConsequent(cons);
 	}
@@ -27,7 +27,7 @@ public class FuzzyRule<InputX, OutputX> {
 	 * Returns the antecedents of this FuzzyRule
 	 * @return an ArrayList of DiscreteFuzzySet representing the antecedents of this FuzzyRule.
 	 */
-	public ArrayList<DiscreteFuzzySet<InputX>> getAntecedents() {
+	public ArrayList<DiscreteFuzzySet> getAntecedents() {
 		return antecedents;
 	}
 
@@ -35,7 +35,7 @@ public class FuzzyRule<InputX, OutputX> {
 	 * Sets the antecedents of this FuzzyRule
 	 * @param antecedents An ArrayList of DiscreteFuzzySet representing the antecedents of this FuzzyRule.
 	 */
-	public void setAntecedents(ArrayList<DiscreteFuzzySet<InputX>> antecedents) {
+	public void setAntecedents(ArrayList<DiscreteFuzzySet> antecedents) {
 		this.antecedents = antecedents;
 	}
 
@@ -55,13 +55,15 @@ public class FuzzyRule<InputX, OutputX> {
 		this.consequent = consequent;
 	}
 	
+	
 	/**
 	 * Returns the DiscreteFuzzySet determined by the provided inputs.
-	 * @param inputs An array of Pair<String, Double> where String is the name of the fuzzy set to which the Double belongs.
-	 * @return
+	 * @param inputs An array of Pair<String, Input> where String is the name of the fuzzy set to which the Input belongs.
+	 * @return the output DiscreteFuzzySet resulting from firing this rule with the inputs provided.
+	 * @throws FuzzyRuleBadInputTypeException 
 	 * @throws DiscreteFuzzySetNegativeMaximumException 
 	 */
-	public DiscreteFuzzySet<OutputX> fire(Pair<String, InputX>[] inputs)
+	public DiscreteFuzzySet<OutputX> fire(Pair[] inputs) throws FuzzyRuleBadInputTypeException
 	{
 		DiscreteFuzzySet<OutputX> output = new DiscreteFuzzySet<OutputX>(consequent);
 		
@@ -69,16 +71,23 @@ public class FuzzyRule<InputX, OutputX> {
 		{
 			double minMembership = 1.0;
 			
-			for(DiscreteFuzzySet<InputX> ft : antecedents)
+			for(DiscreteFuzzySet fs : antecedents)
 			{
-				for(Pair<String, InputX> pair : inputs)
+				for(Pair pair : inputs)
 				{
-					double testMem = ft.getMembership(pair.getSecond());
-					if(pair.getFirst().equals(ft.getName()) && testMem < minMembership)
-					{
-						minMembership = testMem;
-					}
+					Class setInputType = ((Pair) fs.getPoints().get(0)).getFirst().getClass();
+					Class inputType = pair.getSecond().getClass();
+					Class shouldBeString = pair.getFirst().getClass();
 					
+					if(inputType.equals( setInputType ) && shouldBeString.equals("".getClass()))
+					{					
+						double testMem = fs.getMembership(pair.getSecond());
+						if(pair.getFirst().equals(fs.getName()) && testMem < minMembership)
+						{
+							minMembership = testMem;
+						}
+					}
+					else throw new FuzzyRuleBadInputTypeException();				
 				}
 			}
 			
@@ -87,5 +96,6 @@ public class FuzzyRule<InputX, OutputX> {
 		
 		return output;
 	}
+	
 
 }
